--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="phone-minus-btn" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="phone-quantity" type="text" class="form-control text-center" value="1">
-                           <button id="phone-plus-btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleProductChange('phone',false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="phone-count" type="text" class="form-control text-center" value="1">
+                           <button onclick="handleProductChange('phone', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$<span id="phone-price">1219</span></h5>
+                        <h5 id="phone-total">$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -43,12 +43,12 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="case-minus-btn" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="case-quantity" type="text" class="form-control text-center" value="1">
-                           <button id="case-plus-btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleProductChange('case', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="case-count" type="text" class="form-control text-center" value="1">
+                           <button onclick="handleProductChange('case', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$<span id="case-price">59</span></h5>
+                        <h5 id="case-total">$59</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$<span id="subtotal">1278</span></h5>
-                        <h5>$0</h5>
-                        <h5>$<span id="total">1278</span></h5>
+                        <h5 id="total-price">$1278</h5>
+                        <h5 id="tax-amount">$0</h5>
+                        <h5 id="grand-total">$1278</h5>
                      </div>
                   </div>
                </div>
